# hometools

./: .ARCHITECTURE.md  .NATIVE_APP_PLAN.md  .OFFLINE_FEATURE.md  .PHASE1_STATUS.md  .PWA_SHORTCUTS.md  .dockerignore  .env.example  .gitattributes  .gitignore  .iOS_PWA_DECISIONS.md  .pre-commit-config.yaml  Dockerfile  INSTRUCTIONS_background_video_playback.md  Makefile  README.md  TEST_FIX_SUMMARY.md  _analyze.py  _audit_inspect.py  _check_queue.py  _commit_msg.txt  _dbg2_stdout.txt  _debug_check.py  _debug_queue.py  _debug_queue_js.txt  _server_out.txt  _server_stderr.txt  _server_stdout.txt  _test3_stderr.txt  _test3_stdout.txt  _test_js.txt  _test_result.txt  _test_server.py  _test_stderr2.txt  _test_stdout2.txt  brainstorm.py  channel_schedule.yaml  cmp_files.py  comprehensive_test.py  config.py  cut_silence.py  (+24 more)
.github/: INSTRUCTIONS.md  copilot-instructions.md
.github/instructions/: clients-androidtv.instructions.md  clients.instructions.md  shadow_cache.instructions.md  streaming.instructions.md  tools.instructions.md
clients/: README.md
clients/android/: README.md
clients/androidtv/: .gitignore  README.md  build.gradle.kts  gradlew  settings.gradle.kts
clients/androidtv/app/: build.gradle.kts  proguard-rules.pro
clients/androidtv/gradle/: libs.versions.toml
clients/androidtv/scripts/: build.ps1
clients/ios/: README.md
clients/shared/openapi/: README.md  audio-openapi.json  video-openapi.json
docker/: .env.example  .env.synology.example
docs/: IMPLEMENTATION_PLAN.md  architecture.md  docker.md  synology_tv_runbook.md
docs/examples/: avatar_overrides.yaml
docs/ios/: architecture_two_servers.md  device_validation.md  pwa_decisions.md  quick_acceptance.md  test_runbook.md
docs/plans/: background_video_playback.md  keep_code_islands_in_sync.md  native_app_plan.md  offline_feature.md  pwa_shortcuts.md  roadmap.md  shared_server_refactoring.md
scripts/: deploy-synology.sh
src/hometools/: __init__.py  __main__.py  cli.py  config.py  constants.py  instructions.py  logging_config.py  print_tools.py  utils.py
src/hometools/audio/: __init__.py  compare.py  merger.py  metadata.py  sanitize.py  silence.py
src/hometools/streaming/: __init__.py  setup.py
src/hometools/streaming/audio/: __init__.py  catalog.py  server.py  sync.py
src/hometools/streaming/channel/: filler.py  mixer.py  schedule.py  server.py  server_playlist.py  transcode.py
src/hometools/streaming/core/: __init__.py  audit_log.py  catalog.py  custom_order.py  episode_gaps.py  index_cache.py  intro_markers.py  issue_dashboard.py  issue_registry.py  language.py  library_scan.py  maintenance.py  media_overrides.py  models.py  playlists.py  (+10 more)
src/hometools/video/: __init__.py  organizer.py
tests/: conftest.py  test_audit_log.py  test_channel.py  test_channel_playlist.py  test_config.py  test_continue_watching.py  test_custom_order.py  test_episode_gaps.py  test_feature_parity.py  test_instructions.py  test_intro_markers.py  test_issue_registry.py  test_language.py  test_library_scan.py  test_media_overrides.py  test_metadata.py  test_offline_downloads.py  test_openapi_export.py  test_overrides_validator.py  test_playlists.py  test_print_tools.py  test_pwa_shortcuts.py  test_remux.py  test_rename_series.py  test_sanitize.py  test_silence.py  test_smart_playlists.py  test_streaming_audio_catalog.py  test_streaming_audio_server.py  test_streaming_audio_sync.py  test_streaming_core.py  test_streaming_maintenance.py  test_streaming_player_ui.py  test_streaming_progress.py  test_streaming_setup.py  test_streaming_video.py  test_streaming_video_server.py  test_thumbnailer.py  test_ui_audio.py  test_ui_video.py  (+2 more)
wa_data/: mp3files_lut.yaml
(+31 files in other folders)
