[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hometools"
version = "0.2.0"
description = "Useful PC tools for media library management, manual NAS sync, and local media streaming prototypes."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "pydub>=0.25",
    "mutagen>=1.47",
    "tmdbv3api>=1.9",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.scripts]
hometools = "hometools.cli:main"

[project.optional-dependencies]
audio-analysis = [
    "librosa>=0.10",
    "matplotlib>=3.7",
    "numpy>=1.24",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
