[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hometools"
version = "0.2.0"
description = "Useful PC tools for media library management, manual NAS sync, and local media streaming prototypes."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "pydub>=0.25",
    "mutagen>=1.47",
    "tmdbv3api>=1.9",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.24",
]

[project.scripts]
hometools = "hometools.cli:main"

[project.optional-dependencies]
audio-analysis = [
    "librosa>=0.10",
    "matplotlib>=3.7",
    "numpy>=1.24",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.8",
    "pre-commit>=3.0",
]
ui-test = [
    "pytest-playwright>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not ui'"
markers = [
    "ui: Browser UI tests (require Playwright — run with: pytest -m ui)",
]

[tool.ruff]
target-version = "py310"
line-length = 140
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long — handled by formatter
    "E741",   # ambiguous variable name — acceptable in comprehensions
    "SIM108", # ternary operator — readability preference
    "RUF001", # ambiguous unicode char in string — intentional EN DASH
    "RUF002", # ambiguous unicode char in docstring — intentional EN DASH
    "RUF003", # ambiguous unicode char in comment — intentional EN DASH
    "RUF005", # list concatenation — readability preference
]

[tool.ruff.lint.isort]
known-first-party = ["hometools"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

